--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,10 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+        "vlucas/phpdotenv": "5.4.x-dev"
+    },
+    "require-dev": {
+        "symfony/var-dumper": "6.2.x-dev"
+    }
 }
