--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Dnl6c\\PhpFramework\\": "src/"
+            "App\\": "src/"
         }
     },
     "authors": [
@@ -16,7 +16,9 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "vlucas/phpdotenv": "5.4.x-dev"
+        "vlucas/phpdotenv": "5.4.x-dev",
+        "php-di/php-di": "dev-master",
+        "symfony/http-foundation": "6.2.x-dev"
     },
     "require-dev": {
         "symfony/var-dumper": "6.2.x-dev"
